task 4 - Figma -  Responsive Web Design

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             ><img src="./imgs/logo-white.svg" alt="" />
           </a>
         <ul>
-          <li><a href="">About me</a></li>
-          <li><a href="">Skills</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="" class="contact-me">Contact me</a></li>
+          <li><a href="#about">About me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact" class="contact-me">Contact me</a></li>
         </ul>
         </div>
       </nav>
@@ -172,7 +172,7 @@
       </div>
     </div>
     <div class="main-section gray-bg">
-      <h2>About</h2>
+      <h2 id="about">About</h2>
       <p class="sm-text-p about">
         Hi there! I'm Witty Umosung, a dedicated Web Developer collaborating with various institutions and firms to create well-detailed, responsive, and modern websites and web applications. Over the past years, I've focused on mastering Front-End technologies, solidifying my passion for this field. With a strong commitment to creativity and attention to detail, I specialize in crafting custom websites that reflect your unique vision. Whether you have specific ideas in mind or need guidance from start to finish, I'm here to transform your concepts into captivating digital experiences. My goal is to consistently deliver excellence and exceed your expectations, ensuring your satisfaction with every project.
       </p>
@@ -219,7 +219,7 @@
       <div class="divider">
         <img src="./imgs/separatorBlack 1.svg" alt="" />
       </div>
-      <h2>Skills</h2>
+      <h2 id="skills">Skills</h2>
       <h3>Using Now</h3>
       <div class="using-now">
         <div class="skill">
@@ -295,8 +295,15 @@
       </div>
     </div>
   </div>
+  <div class="all-coded-design">
+    <div class="all-coded-design-content">
+      <h4 class="active-border"><a href="" class="active-color">All</a></h4>
+      <h4><a href="">Coded</a></h4>
+      <h4><a href="">Design</a></h4>
+    </div>
+  </div>
     <div class="portfolio-section">
-      <h2>Portfolio</h2>
+      <h2 id="portfolio">Portfolio</h2>
         
     </div>
     <div class="jobs-done">
@@ -328,7 +335,7 @@
       <p>And many more to come...</p>
     </div>
     <div class="main-section">
-      <h2>Contact</h2>
+      <h2 id="contact">Contact</h2>
       <p class="sm-text-p" style="text-align: center; margin: 0">
         Nulla in velit a metus rhoncus tempus. Nulla congue nulla vel sem varius
         finibus. Sed ornare sit amet lorem sed viverra. In vel urna quis libero
