task 4 - Figma -  Responsive Web Design

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
           tempor, accumsan nec eros.
         </p>
         <div class="text-in-box">
-          <p>IT</p>
+          <!-- <p>IT</p> -->
+          <img src="./imgs/bg-IT.svg" alt="">
         </div>
         <h4 class="read-more"><a href="">Read More</a></h4>
       </div>
