task 4 - Figma -  Responsive Web Design

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </p>
         <div class="text-in-box">
           <!-- <p>IT</p> -->
-          <img src="./imgs/bg-IT.svg" alt="">
+          <img src="./imgs/IT-in-box.svg" alt="">
         </div>
         <h4 class="read-more"><a href="">Read More</a></h4>
       </div>
