task 4 - Figma -  Responsive Web Design

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
           </div>
           <div class="pf-image-text">
-            <p>This is not my photo, but I dearly hope to get one just like this. 😂😀😊 </p>
+            <p>This is not my photo, but I dearly hope to get one just like this. </p>
             <div class="pf-image"><img src="./imgs/image 17.png" alt="" /></div>
           </div>
         </div>
